Enable CONFIG_PREEMPT_RT_FULL
Signed-off-by: Tiejun Chen <tiejun.china@gmail.com>

--- a/arch/arm/configs/bcm2709_defconfig
+++ b/arch/arm/configs/bcm2709_defconfig
@@ -33,6 +33,7 @@ CONFIG_ARCH_BCM2835=y
 # CONFIG_CACHE_L2X0 is not set
 CONFIG_SMP=y
 CONFIG_VMSPLIT_2G=y
+CONFIG_PREEMPT_RT_FULL=y
 # CONFIG_CPU_SW_DOMAIN_PAN is not set
 CONFIG_UACCESS_WITH_MEMCPY=y
 CONFIG_SECCOMP=y
