--- a/arch/arm64/configs/bcmrpi3_defconfig
+++ b/arch/arm64/configs/bcmrpi3_defconfig
@@ -32,6 +32,7 @@ CONFIG_ARCH_BCM2835=y
 # CONFIG_CAVIUM_ERRATUM_27456 is not set
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=4
+CONFIG_PREEMPT_RT_FULL=y
 CONFIG_HZ_1000=y
 CONFIG_SECCOMP=y
 CONFIG_ARMV8_DEPRECATED=y
