--- a/arch/arm/boot/dts/overlays/Makefile
+++ b/arch/arm/boot/dts/overlays/Makefile
@@ -142,6 +142,7 @@ dtbo-$(CONFIG_ARCH_BCM2835) += \
 	smi.dtbo \
 	smi-dev.dtbo \
 	smi-nand.dtbo \
+	spi-gpio.dtbo \
 	spi-gpio35-39.dtbo \
 	spi-gpio40-45.dtbo \
 	spi-rtc.dtbo \
