--- a/arch/arm/boot/dts/overlays/spi-gpio-overlay.dts
+++ b/arch/arm/boot/dts/overlays/spi-gpio-overlay.dts
@@ -20,17 +20,17 @@
             spidev@1{
                 compatible = "spidev";
                 reg = <0>;
-                spi-max-frequency = <2000000>;
+                spi-max-frequency = <500000>;
             };
             spidev@2{
                 compatible = "spidev";
                 reg = <1>;
-                spi-max-frequency = <2000000>;
+                spi-max-frequency = <500000>;
             };
             spidev@3{
                 compatible = "spidev";
                 reg = <2>;
-                spi-max-frequency = <2000000>;
+                spi-max-frequency = <500000>;
             };
         };
     };
